--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,225 +1,69 @@
-body {
-    background-color:skyblue;
-    }
-/*
-Colors used
-
-Text Color (Dark Gray): #2b2b2b;
-Primary Color (Purple): #357b70;
-Secondary Color (Orange): #e0b354;
- */
-
-body {
-  font-family: 'Rubik Bubbles', cursive;
-  font-weight: bolder;
-}
-.container {
-width: 90%;
-max-width: 1200px;
-margin: 0 auto;
-}
-
-.social-media {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        size:20px
-     }
-
-.page-header {
-  display: inline ;
-  width: 100%;
-  padding: 20px;
-
-}
-* {
-  box-sizing: border-box;
-}
-.page-header__item:last-child {
-  flex-grow: 1;
-  text-align: right;
-}
-.page-footer {
-    clear: both;
-    display: flex;
-    flex-direction:column;
-    text-align-last: center;
-}
-
-h1 {
-  font-size: 30px;
-  font-weight:50px;
-  align:centre;
-}
-.profile {
-  float:centre;
-  clear:centre;
-  width: 250px;
-  margin-right: 40px;
-  border-radius: 50%;
-}
-.profile {
-  max-width: 700px;
-  margin: 0 auto;
-}
- .div class=social media{
-   float:centre;
- }
- img{
-   float:left
-   clear:left
- }
- .li{
-   float:left;
- }
- a{
-   display:block;
- }
-
-
- }
-.page-footer {
-    clear: both;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-}
-a {
-  color: #357b70;
-}
-
-a:hover {
-  /* No underlining when hovering over a link */
-  -webkit-text-decoration:opacity;
-          text-decoration:opacity;
-}
-a:visited {
-  /* visited link */
-  color: #05676e;
-}
-.navigation-list li {
-  display: inline-block;
-  margin-left: 15px;
-
-}
-.navigation-list {
-  list-style-type: none;
-}
-.profile__portrait {
-  float:left;
-  width:250px;
-  margin-left: 300px;
-  border-radius:100%;
-}
-
-a:active {
-  /* selected link */
-  color: #489c79;
-}
-a:hover, a:focus {
-  /* No underlining when hovering over a link */
-  text-decoration: none;
-}
-button__secondary {
-  background-color:#16342f;
-  color:red;
-  opacity: 0.8;
-}
-.bg-darker {
-  background-color: darken(#16342f,20%);
-}
-
-.bg-lighter {
-  background-color: lighter(#357b70, 10%);
-}
-
-.navigation-list li {
-  display: inline-block;
-  margin-left: 15px;
-}
-.grid {
-  display: grid;
+.list-button {
+    width: calc(100% - 8px);
+    background-color: var(--button-background-color);
+    border-radius: 5px;
+    margin: 4px;
+    padding: 20px;
+    text-align: left;
 }
 
 
-.grid__item {
-  background-color: white;
+.invisible {
+#modal-container {
+    display: none;
 }
-.grid {
-  display: grid;
-  grid-template-columns: 300px 300px 300px;
-  grid-template-rows: 300px 300px;
 }
 
-  @media all and (max-width: 500px) {
-    .grid {
-      grid-template-columns: 1fr;
-      grid-gap: 10px;
-    }
+#modal-container.is-visible {
+    position: fixed;
+    padding: 20px;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
 
-    h1 {
-      font-size: 22px;
-    }
-  }
-  @media all and (min-width: 500px) and (max-width: 750px){
-    .grid {
-      grid-template-columns: 1fr 1fr;
-    }
-  }
-  @media all and (max-width: 750px) {
-    .grid {
-      grid-gap: 10px;
-    }
-    .grid:last-child {
-      grid-column: auto / auto;
-      grid-row: auto / auto;
-    }
-    h1 {
-      font-size: 22px;
-    }
-  }  grid-template-rows: 200px 300px;
+    /* to show it above other content */
+    z-index: 999; 
+
+    /* to allow scrolling if the screen is not high enough*/
+    overflow: auto; 
+
+    /* this is used to center the modal */
+    display: grid;
+    text-align: center;
 }
 
-h1 {
-    font-size: 22px;
-  }
-  @-webkit-keyframes color-change {
-   from {
-     fill:blue
-   }
-   to {
-     fill:yellow
-   }
- }
- @keyframes color-change {
-   0% {
-     fill: #edc655;
-   }
-   50% {
-     fill: #fcffad;
-   }
-   100% {
-     fill: #f76414;
-   }
- }
- .sun {
-  animation-duration: 4s;
-  animation-name: color-change;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation-timing-function: linear;
-   }
-   @keyframes cloud-move {
-  from {
-    transform: translate(0, 50px);
-  }
-  to {
-    transform: translate(200px, 50px);
-  }
+.modal {
+    margin: auto;
+    display: inline-block;
+    box-sizing: border-box;
+    background: #fff;
+    padding: 15px;
+    width: 100%;
+    max-width: 400px;
+    text-align: center;
 }
-.cloud-front {
-  animation: 30s cloud-move infinite alternate linear;
+
+.modal-close {
+    float: right;
+    -webkit-appearance: none;
+    border: 0;
+    background: none;
+    color: #777;
+    text-decoration: underline;
 }
-.cloud-back {
-  animation: 34s cloud-move-reverse infinite alternate linear;
+
+.modal h1, .modal p {
+    text-align: left;
+}
+
+.modal h1 {
+    margin-top: 0;
+}
+
+.modal p {
+    padding-left: 10px;
+    margin-bottom: 0;
 }
